@@ -203,8 +203,8 @@
    be used to configure message limits or create favourite recipients
    lists. Enable this feature only if it doesn't violate privacy rules or laws
    in your country. What storage driver should we use?">sql
-    <case name="none" desc="None"/>
-    <case name="sql" desc="SQL">
+    <case name="Null" desc="None"/>
+    <case name="Sql" desc="SQL">
      <configsection name="params">
       <configinteger name="threshold" desc="How many days should we keep old
       log entries?">60</configinteger>
