@@ -16,12 +16,27 @@ class IMP_Injector_Binder_Sentmail implements Horde_Injector_Binder
      */
     public function create(Horde_Injector $injector)
     {
-        if (empty($GLOBALS['conf']['sentmail']['driver'])) {
-            return IMP_Sentmail::factory();
+        $driver = empty($GLOBALS['conf']['sentmail']['driver'])
+            ? 'Null'
+            : $GLOBALS['conf']['sentmail']['driver'];
+        $params = Horde::getDriverConfig('sentmail', $driver);
+
+        if (strcasecmp($driver, 'Sql') === 0) {
+            $write_db = $injector->getInstance('Horde_Db_Pear')->getOb();
+
+            /* Check if we need to set up the read DB connection
+             * separately. */
+            if (empty($params['splitread'])) {
+                $params['db'] = $write_db;
+            } else {
+                $params['write_db'] = $write_db;
+                $params['db'] = $injector->getInstance('Horde_Db_Pear')->getOb('read');
+            }
+        } elseif (strcasecmp($driver, 'None') === 0) {
+            $driver = 'Null';
         }
 
-        $driver = $GLOBALS['conf']['sentmail']['driver'];
-        return IMP_Sentmail::factory($driver, Horde::getDriverConfig('sentmail', $driver));
+        return IMP_Sentmail::factory($driver, $params);
     }
 
     /**
