@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Sentmail SQL driver now supports split read/write operation.
 [mms] Pass compose message data to mailer backend via stream; much more
       efficient, especially with larger messages (Request #8909).
 [mms] Add strip attachments support in DIMP.
